# jellyfin-chown-pl

./: .dockerignore  Dockerfile  README.md  pyproject.toml
containers/: .dockerignore  Dockerfile  README.md  compose.yaml  k8s-jfchownpl.yaml
src/jellyfin_chown_pl/: __main__.py
