[project]
name = "jellyfin-chown-pl"
version = "1.0.0"
description = "Change the owner of a playlist in Jellyfin."
authors = [
    {name = "Martin Reid",email = "lmreid1997@gmail.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pycurl (>=7.45.7,<8.0.0)"
]
scripts = { jfchownpl = "jellyfin_chown_pl.__main__:main" }



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
